--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         <LinearLayout
             android:id="@+id/Sonido"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="600dp">
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -25,6 +25,23 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"></LinearLayout>
             </ScrollView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/botonPausaLinea"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/background_dark"
+            android:orientation="vertical"
+            android:onClick="detener">
+
+            <Button
+                android:id="@+id/buttonStop"
+                android:layout_width="100px"
+                android:layout_height="100px"
+                android:background="@android:color/background_dark"
+                android:foreground="@drawable/pauseblanco3"
+                android:onClick="detener" />
         </LinearLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
