--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,8 @@
                 android:id="@+id/buttonStop"
                 android:layout_width="100px"
                 android:layout_height="100px"
+                android:layout_marginLeft="488px"
+                android:layout_marginTop="30px"
                 android:background="@android:color/background_dark"
                 android:foreground="@drawable/pauseblanco3"
                 android:onClick="detener" />
